--- a/style.css
+++ b/style.css
@@ -657,7 +657,7 @@ body {
 
 .index-banner .banner-titles {
 	padding-top: 150px;
-	padding-left: 6%;
+	padding-left: 25%;
 }
 
 .banner-icon {
@@ -1151,7 +1151,7 @@ body {
 		background-color: white;
 		-webkit-transform: translateY(-50%);
 		transform: translateY(-50%);
-		border-radius: 10%;
+		border-radius: 10% 10% 0% 0%;
 		-webkit-box-shadow: 12px 12px 49px -27px #bab6ba;
 		box-shadow: 12px 12px 49px -27px #bab6ba;
 	}
